Development Portal (2020-04-02 shi)
==============================
Display policy marker narrative if vocab 99
Display policy marker code if vocab 99
Display policy marker vocabulary-uri if vocab 99
Display activity date percentile as loading bar
Change layout for activity dates
CSS changes
Display glossary for new sector graph
Add check for when length is not found
Add check for when result facets are not provided


Development Portal (2020-04-01 shi)
==============================
Fix display recipient-country code for org file
Fix display reporting org 99 url
Display code for recipient-country for org file
Display code for recipient region when vocab is 1


Development Portal (2020-03-30 shi)
==============================
Display policy marker significance description
Display tag vocab description and url
Display tag narrative if vocab is 99
Display other identifier code number
Minor css changes


Development Portal (2020-03-28 shi)
==============================
Update search text
Update search2 glossary and rearrange filters
css changes


Development Portal (2020-03-26 shi)
==============================
New graph replacements for landing page
Display organisation types for publisher graph
Display country codes for recipient graph
Display sector codes for sector graph
Adjust colours for accessibility
Display information text for new graphs
Minor css changes
Add padding for when result values are long text
Update tag section to include code number
Capitalise narrative for result title and description


Development Portal (2020-03-08 shi)
==============================
Fix result title and description display
Add indicator length
Update result, document-link css
Cleanup glossary section
Update display for combination of result reference, doc, title


Development Portal (2020-03-05 shi)
==============================
Display @measure and date bars in results
Update background colour for charts to use hsl
Display @baseline-year

