@@ -1,3 +1,14 @@
+Development Portal (2020-04-03 shi)
+==============================
+Update policy marker and tag conditions
+Display as url to tag vocab when available
+CSS changes
+Update layout display for result indicators
+Update new SAVi element column widths
+Move tag and policy-marker further up
+Remove link for owner-org id
+
+
 Development Portal (2020-04-02 shi)
 ==============================
 Display policy marker narrative if vocab 99
